--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
     "rules": {
         "linebreak-style": ["error", "windows"],
         "max-len": 0,
+        "no-console": "off",
         "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     }
